--- a/data/explorer.glade
+++ b/data/explorer.glade
@@ -45,7 +45,7 @@
 		      <accelerator key="o" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image266">
+			<widget class="GtkImage" id="image295">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-open</property>
 			  <property name="icon_size">1</property>
@@ -67,7 +67,7 @@
 		      <accelerator key="d" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image267">
+			<widget class="GtkImage" id="image296">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-clear</property>
 			  <property name="icon_size">1</property>
@@ -89,7 +89,7 @@
 		      <accelerator key="r" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image268">
+			<widget class="GtkImage" id="image297">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-refresh</property>
 			  <property name="icon_size">1</property>
@@ -117,7 +117,7 @@
 		      <accelerator key="s" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image269">
+			<widget class="GtkImage" id="image298">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-save-as</property>
 			  <property name="icon_size">1</property>
@@ -138,7 +138,7 @@
 		      <signal name="activate" handler="on_save_exr" last_modification_time="Sun, 15 Feb 2004 09:08:09 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image270">
+			<widget class="GtkImage" id="image299">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-save-as</property>
 			  <property name="icon_size">1</property>
@@ -177,7 +177,7 @@
 		      <accelerator key="q" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image271">
+			<widget class="GtkImage" id="image300">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-quit</property>
 			  <property name="icon_size">1</property>
@@ -253,6 +253,42 @@
 		      <property name="active">True</property>
 		      <signal name="activate" handler="on_widget_toggle" last_modification_time="Wed, 18 Feb 2004 21:17:31 GMT"/>
 		      <accelerator key="b" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="separator11">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="zoom_to_1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Zoom to 1.0</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_zoom_reset" last_modification_time="Fri, 04 Feb 2005 05:43:52 GMT"/>
+		      <accelerator key="1" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="zoom_out1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Zoom Out</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_zoom_out" last_modification_time="Fri, 04 Feb 2005 05:43:52 GMT"/>
+		      <accelerator key="minus" modifiers="0" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="zoom_in1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Zoom In</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_zoom_in" last_modification_time="Fri, 04 Feb 2005 05:43:52 GMT"/>
+		      <accelerator key="plus" modifiers="0" signal="activate"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -487,23 +523,11 @@
 		<widget class="GtkMenu" id="help_menu_menu">
 
 		  <child>
-		    <widget class="GtkImageMenuItem" id="about">
+		    <widget class="GtkMenuItem" id="about">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_About</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_about_activate" last_modification_time="Fri, 03 Dec 2004 06:05:31 GMT"/>
-
-		      <child internal-child="image">
-			<widget class="GtkImage" id="image272">
-			  <property name="visible">True</property>
-			  <property name="stock">gtk-about</property>
-			  <property name="icon_size">4</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-		      </child>
 		    </widget>
 		  </child>
 		</widget>
@@ -597,7 +621,7 @@
       <child>
 	<widget class="GtkStatusbar" id="statusbar">
 	  <property name="visible">True</property>
-	  <property name="has_resize_grip">True</property>
+	  <property name="has_resize_grip">False</property>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
@@ -1732,6 +1756,29 @@ to balance interactive response with image quality.</property>
 		  <property name="bottom_attach">1</property>
 		</packing>
 	      </child>
+
+	      <child>
+		<widget class="GtkCheckButton" id="cluster_discovery">
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="label" translatable="yes">Automatically discover nodes on the local network</property>
+		  <property name="use_underline">True</property>
+		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="focus_on_click">True</property>
+		  <property name="active">False</property>
+		  <property name="inconsistent">False</property>
+		  <property name="draw_indicator">True</property>
+		  <signal name="toggled" handler="on_cluster_discovery_toggled" last_modification_time="Sun, 06 Feb 2005 06:04:32 GMT"/>
+		</widget>
+		<packing>
+		  <property name="left_attach">0</property>
+		  <property name="right_attach">1</property>
+		  <property name="top_attach">1</property>
+		  <property name="bottom_attach">2</property>
+		  <property name="x_options">fill</property>
+		  <property name="y_options"></property>
+		</packing>
+	      </child>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
@@ -1877,7 +1924,7 @@ to balance interactive response with image quality.</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
-  <property name="resizable">True</property>
+  <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
@@ -1892,12 +1939,20 @@ to balance interactive response with image quality.</property>
       <property name="spacing">6</property>
 
       <child>
-	<widget class="GtkImage" id="about image">
+	<widget class="GtkAlignment" id="about_image">
 	  <property name="visible">True</property>
 	  <property name="xalign">0.5</property>
 	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
+	  <property name="xscale">1</property>
+	  <property name="yscale">1</property>
+	  <property name="top_padding">0</property>
+	  <property name="bottom_padding">0</property>
+	  <property name="left_padding">0</property>
+	  <property name="right_padding">0</property>
+
+	  <child>
+	    <placeholder/>
+	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
@@ -1907,7 +1962,7 @@ to balance interactive response with image quality.</property>
       </child>
 
       <child>
-	<widget class="GtkLabel" id="about version">
+	<widget class="GtkLabel" id="about_version">
 	  <property name="visible">True</property>
 	  <property name="label" translatable="yes"></property>
 	  <property name="use_underline">False</property>
@@ -1978,7 +2033,7 @@ Micah Dowty&lt;/span&gt;</property>
 	  <property name="spacing">0</property>
 
 	  <child>
-	    <widget class="GtkButton" id="about close">
+	    <widget class="GtkButton" id="about_close">
 	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
@@ -1986,6 +2041,7 @@ Micah Dowty&lt;/span&gt;</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
+	      <signal name="clicked" handler="on_about_close" last_modification_time="Fri, 04 Feb 2005 04:31:05 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
